[tool.poetry]
name = "deepehrgraph"
version = "0.2.0"
description = ""
authors = ["francois.cokelaer <francois.cokelaer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightning = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
scriv = "^1.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: pyproject.toml: project.version"
