[tool.poetry]
name = "deepehrgraph"
version = "0.3.2"
description = ""
authors = ["francois.cokelaer <francois.cokelaer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10, < 3.13"
lightning = "^2.1.1"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.0"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
tensorboardx = "^2.6.2.2"
torchmetrics = "^1.2.0"
tensorboard = "^2.15.1"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
scriv = "^1.5.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deepehrgraph = 'deepehrgraph.main:main'
